Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67532

QTableView/TreeView not updated when header size is changed programatically

XMLWordPrintable

    • c782ed3c48b31dc38b728947270df3fc3f3a7626

      When the size of a QHeaderView is changed programatically e.g. with setFixedWidth() after the view was layouted, the change is not propagated to the QTableView/TreeView.
      See attached testcase to reproduce the issue

      /edit: a simple solution would be to fire geometriesChanged() on QEvent::Resize but I'm not sure if this creates to much noise...

        1. qheaderview_fixedsize.tgz
          1 kB
          Christian Ehrlicher
        For Gerrit Dashboard: QTBUG-67532
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            chehrlic Christian Ehrlicher
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes